Color contrast fix.

--- a/styles/myownstyle.css
+++ b/styles/myownstyle.css
@@ -62,14 +62,14 @@ h1, li, p {
   }
 
   .footer-wrap {
-    font-size: 22px;
-    color: #FF00FF;
+    font-size: 16px;
+    color: black;
     text-align: center;
     padding: 10px;
     font-family: "Lucida Console", "Courier New", monospace;
   }
 
   .updated {
-    font-size: 24px;
-    color: yellow;
+    font-size: 14px;
+    color: #212121;
   }
